--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -147,6 +147,7 @@ We may then define a third dependent term $\sa¬minbalance$, the minimum, or \em
     \mathbf{a}_\sa¬octets \in \Nbits{64} &\equiv
       \sum\limits_{\,\tup{h, z} \in \keys{\mathbf{a}_\sa¬requests}\,} \!\!\!\!81 + z \\
     &\phantom{\equiv\ } + \sum\limits_{\tup{x, y} \in \mathbf{a}_\sa¬storage} 34 + \len{y} + \len{x} \\
+    \label{eq:deposits}
     \mathbf{a}_\sa¬minbalance \in \balance &\equiv
       \max(0,
         \Cbasedeposit
