--- a/text/overview.tex
+++ b/text/overview.tex
@@ -215,7 +215,8 @@ The full definition follows in appendix \ref{sec:virtualmachine}.
 
 
 
-\subsection{Epochs and Slots}\label{sec:epochsandslots}
+\subsection{Epochs and Slots}
+\label{sec:epochsandslots}
 
 Unlike the \emph{YP} Ethereum with its proof-of-work consensus system, \Jam defines a proof-of-authority consensus mechanism, with the authorized validators presumed to be identified by a set of public keys and decided by a \emph{staking} mechanism residing within some system hosted by \Jam. The staking system is out of scope for the present work; instead there is an \textsc{api} which may be utilized to update these keys, and we presume that whatever logic is needed for the staking system will be introduced and utilize this \textsc{api} as needed.
 
