--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -33,6 +33,7 @@ We define the new Accumulation Output Log $\accoutbelt$. This is formed from the
 
 The final state transition for $\recenthistory$ appends a new item including the new block's header hash, a Merkle commitment to the block's Accumulation Output Log and the set of work-reports made into it (for which we use the guarantees extrinsic, $\xtguarantees$). Formally:
 \begin{equation}
+  \label{eq:recenthistorydef}
   \begin{aligned}
     \recenthistory' &\equiv {\overleftarrow{\recenthistorypostparentstaterootupdate \append \tup{
       \rh¬reportedpackagehashes,
