--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -108,7 +108,7 @@ Our formalisms begin by defining $\partialstate$ as a characterization of (\ie v
   \partialstate \equiv \tuple{\begin{aligned}
     &\isa{\ps¬accounts}{\dictionary{\serviceid}{\serviceaccount}} \,,\;
     \isa{\ps¬stagingset}{\sequence[\Cvalcount]{\valkey}} \,,\;
-    \isa{\ps¬authqueue}{\sequence[_\Ccorecount]{\sequence[\Cauthqueuesize]{\hash}}} \,,\\
+    \isa{\ps¬authqueue}{\sequence[\Ccorecount]{\sequence[\Cauthqueuesize]{\hash}}} \,,\\
     &\isa{\ps¬manager}{\serviceid} \,,\;
     \isa{\ps¬assigners}{\sequence[\Ccorecount]{\serviceid}} \,,\;
     \isa{\ps¬delegator}{\serviceid} \,,\;
@@ -307,8 +307,6 @@ The single-service accumulation function, $\accone$, transforms an initial state
 This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used as an operand to the \textsc{pvm} Accumulation function $\Psi_A$: work-items (together with associated data in their work-packages) are rephrased into a sequence of such operand tuples $\mathbf{i}$. It also draws upon $\wd¬gaslimit$, the gas limit implied by the work-reports and gas-privileges.
 
 \subsection{Deferred Transfers and State Integration}
-
-\newcommand*{\accoutseq}{\mathbf{c}}
 
 Given the result of the top-level $\accseq$, we may define the posterior state $\privileges'$, $\authqueue'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
 \begin{align}
