--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -33,6 +33,7 @@ Note return codes for a host-call-request exit are any non-zero value less than 
 
 The Is-Authorized invocation is the first and simplest of the four, being totally stateless. It provides only host-call functions for inspecting its environment and parameters. It accepts as arguments only the core on which it should be executed, $c$. Formally, it is defined as $\Psi_I$:
 \begin{align}
+  \label{eq:isauthinvocation}
   \Psi_I &\colon \abracegroup{
     \tuple{\workpackage, \coreindex} &\to \tuple{\blob \cup \workerror, \gas} \\
     \tup{\wpX, c} &\mapsto \begin{cases}
@@ -72,6 +73,7 @@ The Export host-call depends on two pieces of context; one sequence of segments 
 Unlike the other invocation functions, the Refine invocation function implicitly draws upon some recent service account state item $\accounts$. The specific block from which this comes is not important, as long as it is no earlier than its work-package's lookup-anchor block. It explicitly accepts the work-package $p$ and the index of the work item to be refined, $i$. Additionally, the authorizer trace $\mathbf{r}$ is provided together with all work items' import segments $\overline{\mathbf{i}}$ and an export segment offset $\segoff$. It results in either some error $\workerror$ or a pair of the refinement output blob and the export sequence. Formally:
 \begin{align}
   &\Psi_R \colon \abracegroup{
+    \label{eq:refinvocation}
     \tuple{\N, \workpackage, \blob, \sequence{\sequence{\segment}}, \N} &\to \tuple{\blob \cup \workerror, \sequence{\segment}, \gas} \\
     \tup{i, p, \mathbf{r}, \overline{\mathbf{i}}, \segoff} &\mapsto \begin{cases}
       \tup{\token{BAD}, \sq{}, 0} &\when w_\wi¬serviceindex \not\in \keys{\accounts} \vee \histlookup(\accounts\subb{w_\wi¬serviceindex}, (p_\wp¬context)_\wc¬lookupanchortime, w_\wi¬codehash) = \none \\
@@ -136,6 +138,7 @@ We track both regular and exceptional dimensions within our context mutator, but
 We define $\Psi_A$, the Accumulation invocation function as:
 \newcommand*{\local¬basestate}{\ao¬poststate}
 \begin{align}
+  \label{eq:accinvocation}
   \Psi_A& \colon\abracegroup{
     \tuple{
       \partialstate, \timeslot, \serviceid, \gas, \sequence{\operandtuple}
@@ -242,6 +245,7 @@ Concretely, we create the identifier from the Blake2 hash of the identifier of t
 
 We define the On-Transfer service-account invocation function as $\Psi_T$; it is somewhat similar to the Accumulation Invocation except that the only state alteration it facilitates are basic alteration to the storage of the subject account. No further transfers may be made, no privileged operations are possible, no new accounts may be created nor other operations done on the subject account itself. The function is defined as:
 \begin{align}
+  \label{eq:onxferinvocation}
   \Psi_T &: \begin{cases}
     \tuple{\dictionary{\serviceid}{\serviceaccount}, \timeslot, \serviceid, \defxfers}
     &\to \tuple{\serviceaccount, \gas} \\
